deploy/sealos/rc/inngest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xpod-rc-inngest
  namespace: xpod-rc
  labels:
    app: xpod-rc-inngest
spec:
  type: ClusterIP
  selector:
    app: xpod-rc-inngest
  ports:
    - name: http
      port: 8288
      targetPort: http
      protocol: TCP
