deploy/sealos/rc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xpod
  namespace: xpod-rc
  labels:
    app: xpod-rc
spec:
  selector:
    app: xpod-rc
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
